Check that error messages are correct; also checks that realmain() failed for the right reason.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,6 +45,7 @@ repos:
             "--fail-uncovered-lines=5",
             "--fail-uncovered-functions=1",
             "--quiet",
+            "--show-missing-lines",
           ]
         pass_filenames: false
   - repo: meta
